2007-01-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph_trie.c (igraph_trie_check) : added
	* src/foreign-graphml.c : fixed a bug when reading a graph with
	invalid attribute keys
	* examples/simple/test.gxl : extended to include an invalid attribute
	* examples/simple/igraph_trie.c : added test case for
	igraph_trie_check

2007-01-26  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign-graphml.c : now supports graph attributes
	* src/type_indexededgelist.c (igraph_empty_attrs) : added
	* src/igraph.h : updated
	
	* src/attributes.c (igraph_i_attribute_init) : added attr parameter
	* src/attributes.h (igraph_i_attribute_init) : updated
	
	* interfaces/python/igraphmodule.c : updated for new init attribute
	handler
	* interfaces/R/src/rinterface.c : updated for new init attribute
	handler
	
	* examples/simple/test.gxl : added a graph attribute for testing

2007-01-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cliques.c (igraph_i_cliques) : free storage after an error,
	allocate each vector in the pointer vector separately

	* src/cliques.c (igraph_cliques) : max_size=0 means no limit and
	not the largest cliques
	(igraph_largest_cliques) : added
	(igraph_independent_vertex_sets) : max_size=0 means no limit and
	not the largest cliques
	(igraph_largest_independent_vertex_sets) : added

	* examples/simple/igraph_independent_sets.c : updated
	* examples/simple/igraph_cliques.c : updated

	* src/cliques.c (igraph_i_cliques_free_res) : make it a bit more
	sophisticated
	(igraph_i_find_k_cliques) : added
	(igraph_i_cliques) : separated into 3
	(igraph_cliques, igraph_largest_cliques) : updated
	(igraph_i_largest_cliques) : added
	(igraph_largest_independent_vertex_sets) : updated

2007-01-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cliques.c (igraph_i_cliques) : bug corrected

2007-01-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cliques.c (igraph_cliques, igraph_independent_vertex_sets)
	(igraph_maximal_cliques, igraph_maximal_independent_vertex_sets)