@@ -1,3 +1,10 @@
+2007-02-02  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (graph.kcores) :
+	renamed to graph.coreness
+	* interfaces/R/src/rinterface.c (R_igraph_k_cores) :
+	renamed to R_igraph_coreness
+
 2007-01-29  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected loop drawing
