@@ -1,3 +1,7 @@
+2007-02-02  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/cores.c (igraph_k_cores) : renamed to igraph_coreness
+
 2007-01-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>
 
 	* src/igraph_trie.c (igraph_trie_check) : added
